Fixed issue with whitespace not being preserved in barcode text for UserScanBarcodeCell and BarcodeImageModalView.

--- a/src/components/BarcodeImageModalView.css
+++ b/src/components/BarcodeImageModalView.css
@@ -43,6 +43,7 @@
     font-size: 1.5rem;
     text-align: center;
     margin: 5px;
+    white-space: pre-wrap;
     overflow-wrap: anywhere;
-    word-wrap: break-word;
+    word-break: break-word;
 }
